# Treadless-lab

./: .gitignore  CMakeLists.txt  README.md  driveline_emulator.cpp  vCAN_Writer.cpp
.autogit/logs/: log-12-10-2021-10-17-33.txt  log-12-10-2021-10-47-40.txt  log-12-10-2021-11-17-47.txt  log-12-10-2021-11-47-53.txt  log-12-10-2021-12-17-59.txt  log-12-10-2021-12-48-5.txt  log-12-10-2021-13-18-12.txt  log-12-10-2021-13-48-19.txt  log-12-10-2021-14-18-25.txt  log-12-10-2021-14-48-31.txt  log-12-10-2021-15-18-38.txt  log-12-10-2021-9-47-27.txt  log-15-10-2021-15-34-29.txt  log-15-10-2021-15-4-20.txt  log-15-10-2021-16-34-41.txt  log-15-10-2021-16-4-34.txt  log-16-10-2021-13-32-33.txt  log-16-10-2021-14-2-41.txt  log-16-10-2021-14-32-47.txt  log-16-10-2021-9-13-24.txt  log-17-10-2021-14-43-26.txt  log-18-10-2021-10-17-38.txt  log-18-10-2021-10-47-44.txt  log-18-10-2021-11-17-50.txt  log-18-10-2021-11-47-55.txt  log-18-10-2021-12-18-1.txt  log-18-10-2021-5-46-41.txt  log-18-10-2021-6-16-48.txt  log-18-10-2021-6-46-55.txt  log-18-10-2021-7-17-2.txt  log-18-10-2021-7-47-8.txt  log-18-10-2021-8-17-15.txt  log-18-10-2021-8-47-21.txt  log-18-10-2021-9-17-27.txt  log-18-10-2021-9-47-33.txt
Documentation/: sequence.drawio
Libs/can_transmitter_receiver/: can_frame.h
Scripts/: execute.sh
Src/: vCAN_reader.cpp
Src/DrivelineEmulator/: driveline_emulator.cpp
Src/InputHandler/: CMakeLists.txt
Src/InputHandler/include/: can_encoder.h  user_input.h
Src/InputHandler/src/: main.cpp
Src/VCAN_SocketCAN/: vCAN_Writer  vCAN_Writer.cpp  vCAN_writer
Utils/can_transmitter_receiver/: can_frame.h  can_transmitter_receiver.h
apps/: CMakeLists.txt
apps/avic/: CMakeLists.txt
apps/driveline_emulator/: CMakeLists.txt  Makefile
apps/driveline_emulator/include/: driveline.hpp
apps/driveline_emulator/src/: driveline.cpp  main.cpp
apps/driveline_emulator/test/: driveline_test.cpp  main.cpp
apps/input_handler/: CMakeLists.txt  Makefile
apps/input_handler/include/: userinput_reader.h
apps/input_handler/src/: main.cpp  userinput_reader.cpp
avic/: CMakeLists.txt
avic/include/: cluster_updater.h  your_stuff.h
include/: driveline.hpp  vCAN_Writer.hpp  wh.hpp
libs/: CMakeLists.txt
libs/include/: read_write_handler.hpp  socketcan.h  userinput_reader.h  vCAN_Writer.hpp  wh.hpp  write_handler.hpp
libs/src/: read_write_handler.cpp  socketcan.cpp  socketcan_cpp.cpp  vCAN_Writer.cpp  wh.cpp  write_handler.cpp
src/: driveline_emulator.cpp  input.cpp  socketcan_cpp.cpp  vCAN_Writer.cpp  vCAN_Writer2.cpp  wh.cpp
uml/: module_diagram.drawio
(+15 files in other folders)
